b.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: gvisor-test
  name: gvisor-test
  namespace: team-purple
spec:
  runtimeClassName: gvisor
  containers:
  - image: nginx:1.27.1
    name: gvisor-test
